--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -30,6 +30,10 @@
       }
     ],
     "artifactName": "${productName}-Windows-${version}-Setup.${ext}",
+    "extraResources":[{
+      "from": "bat",
+      "to": "../bat"
+    }],
     "icon": "ZeroTier.ico"
   },
   "nsis": {
