--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "electron-log": "^5.1.1",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
+    "multer": "^1.4.5-lts.1",
+    "ping": "^0.4.4",
     "vue-request": "^2.0.4"
   }
 }
